--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name='author' content='Nuraly Uzakaliyev'>
     <link rel='shortcut icon' href='{{ url_for("static", filename="favicon.ico") }}'>
 
-    <title>Детализация P2P</title>
+    <title>Detalization Example</title>
     <link href='{{ url_for("static", filename="bootstrap.min.css")}}' rel='stylesheet'>
     <link href='{{ url_for("static", filename="sticky-footer-navbar.css")}}' rel='stylesheet'>
     <link type='text/css' rel='stylesheet' href='{{ url_for("static", filename="style.css") }}'>
@@ -35,7 +35,7 @@
         </div>
         
         <div class = 'form_field'>  
-          <label>Тип карты:</label>
+          <label>Card type:</label>
               
             <input type = 'checkbox' value = 'Visa'       name = 'type_1' checked> 
             <label for = 'card_type'> Visa       </label> <br>
